samples/_failures_safe/1761485258_de30a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8150812.c: In function ‘main’:
./samples/SAFE/__tmp_f8150812.c:168:16: error: missing terminating " character
  168 |         printf("%-12
      |                ^~~~~
./samples/SAFE/__tmp_f8150812.c:168:9: error: expected expression at end of input
  168 |         printf("%-12
      |         ^~~~~~
./samples/SAFE/__tmp_f8150812.c:168:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f8150812.c:168:9: error: expected declaration or statement at end of input
